--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="box">
     
-<img class="qrimage" src="image-qr-code.png" alt="A qr code image">
+<img alt="A qr code image" class="qrimage" src="image-qr-code.png" >
 
 
   <p style="background-color: white; font-weight: 700;">Improve your front-end 
